// src/main/protobuf/greeting.proto
syntax = "proto3";

package greeting;

option java_multiple_files = true;
option java_package = "app.mosia.grpc";

// The greeting service definition.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string email = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}